# Mahjoub_Online_WebApp

./: .env  Procfile  config.py  database_fixer.py  deploy.bat  init_db.py  nixpacks.toml  pyproject.toml  render-build.sh  requirements.txt  reset_db.py  run.py  seed_admin.py  setup_supplier.py  vercel.json
admin_panel/: __init__.py  _init__.py  add_supplier_routes.py  auth.py  auth_controller.py  manage_suppliers.py  models.py  routes.py  staff_routes.py  supplier_service_routes.py  suppliers_logic.py  utils.py
admin_panel/  templates/: base.html
admin_panel/engines/: supplier_engine.py
admin_panel/templates/: add_supplier.html  admin.wallets.html  base.html  dashboard.html  login.html  manage_suppliers.html  wallets.html
api/: index.py
apps/: __init__.py  extensions.py  run_seed.py
apps/add_supplier/: __init__.py  routes.py
apps/admin_dashboard/: __init__.py  routes.py
apps/admin_portal/: routes.py
apps/api/: search.py
apps/auth_portal/: __init__.py  routes.py
apps/config/: constants.py
apps/financial_ops/: __init__.py  routes.py
apps/mahjoub_bridge/: __init__.py  routes.py
apps/models/: __init__.py  admin_db.py  bridge_db.py  settlements_db.py  statement_db.py  supplier_db.py  vault_db.py  wallet_db.py
apps/statement/: __init__.py  routes.py
apps/supplier_app/: routes.py
core/: __init__.py  currency_engine.py  models.py  qumra_connector.py
models/: admin_db.py  supplier_db.py
services/: qumra_handler.py  wallet_service.p  wallet_service.py
supplier_panel/: __init__.py  auth_logic.py  decorators.py  routes.py
(+56 files in other folders)
