[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mahjoub-online"
version = "1.0.0"
description = "منصة الحوكمة الرقمية المتكاملة - محجوب أونلاين"
dependencies = [
    "flask",
    "flask-sqlalchemy",
    "flask-login",
    "flask-migrate",
    "gunicorn",
    "werkzeug",
    "email-validator",
    "cryptography"
]

[tool.vercel]
# نقطة دخول Vercel: توجه إلى ملف run.py وتحديداً كائن التطبيق 'app'
entrypoint = "run.py:app"

[tool.setuptools]
# حزمة التطبيق الرئيسية التي تحتوي على المنطق البرمجي
packages = ["apps"]
